src/test/ui/traits/inductive-overflow/lifetime.stderr
error[E0275]: overflow evaluating the requirement `Box<X<C<'_>>>: NotAuto`
  --> $DIR/lifetime.rs:27:5
   |
LL |     is_send::<X<C<'static>>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required because of the requirements on the impl of `NotAuto` for `X<C<'_>>`
  --> $DIR/lifetime.rs:19:12
   |
LL | impl<T: Y> NotAuto for X<T> where T::P: NotAuto {}
   |            ^^^^^^^     ^^^^
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `NotAuto` for `X<C<'static>>`
note: required by a bound in `is_send`
  --> $DIR/lifetime.rs:22:15
   |
LL | fn is_send<S: NotAuto>() {}
   |               ^^^^^^^ required by this bound in `is_send`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
